# gpt4-slack-bot

./: README.md  pyproject.toml
gpt4_slack_bot/: gpt4_slack_bot.py
